@@ -5,19 +5,21 @@
 #define __FORM_H
 
 #include <dolfin/constants.h>
+#include <dolfin/NewArray.h>
 
 namespace dolfin
 {
 
   class Cell;
+  class NewFunction;
   class NewFiniteElement;
   
   class Form
   {
   public:
 
-    /// Constructor
-    Form(const NewFiniteElement& element);
+    /// Create form for given element and given number of coefficients
+    Form(const NewFiniteElement& element, uint ncoeff = 0);
 
     /// Destructor
     virtual ~Form();
@@ -36,6 +38,12 @@ namespace dolfin
     // Update affine map from reference tetrahedron
     void updateTetLinMap(const Cell& cell);
 
+    // Update coefficients
+    void updateCoefficients(const Cell& cell);
+
+    // Add function
+    void add(const NewFunction& function);
+
     // The finite element
     const NewFiniteElement& element;
 
@@ -47,6 +55,15 @@ namespace dolfin
 
     // Inverse of Jacobian of map
     real g00, g01, g02, g10, g11, g12, g20, g21, g22;
+
+    // List of functions (coefficients)
+    NewArray<const NewFunction*> functions;
+    
+    // Coefficients of functions projected to current element
+    real** c;
+
+    // Number of coefficients
+    uint ncoeff;
 
   };
 
