@@ -2,11 +2,9 @@
 // Licensed under the GNU GPL Version 2.
 
 #include <dolfin/ElementFunction.h>
-#include <dolfin/NewFiniteElement.h>
 #include <dolfin/FiniteElement.h>
 #include <dolfin/Node.h>
 #include <dolfin/Point.h>
-#include <dolfin/NewPDE.h>
 #include <dolfin/ScalarExpressionFunction.h>
 
 using namespace dolfin;
@@ -80,18 +78,5 @@ void ScalarExpressionFunction::update(FunctionSpace::ElementFunction& v,
 {
   for (FiniteElement::TrialFunctionIterator phi(element); !phi.end(); ++phi)
     v.set(phi.index(), phi, phi.dof(cell, *this, t));
-}
-//-----------------------------------------------------------------------------
-void ScalarExpressionFunction::update(NewArray<real>& w, const Cell& cell, 
-				      const NewFiniteElement& element) const
-{
-  // FIXME: time t ignored
-  
-  w.resize(element.spacedim());
-  for (unsigned int i = 0; i < element.spacedim(); i++)
-  {
-    const Point& p = element.coord(i, cell);
-    w[i] = f(p.x, p.y, p.z, 0.0);
-  }
 }
 //-----------------------------------------------------------------------------
