@@ -3,10 +3,8 @@
 
 #include <dolfin/ElementFunction.h>
 #include <dolfin/FiniteElement.h>
-#include <dolfin/NewFiniteElement.h>
 #include <dolfin/Node.h>
 #include <dolfin/Point.h>
-#include <dolfin/NewPDE.h>
 #include <dolfin/VectorExpressionFunction.h>
 
 using namespace dolfin;
@@ -79,18 +77,5 @@ void VectorExpressionFunction::update(FunctionSpace::ElementFunction& v,
 {
   for (FiniteElement::TrialFunctionIterator phi(element); !phi.end(); ++phi)
     v.set(phi.index(), phi, phi.dof(cell, *this, t));
-}
-//-----------------------------------------------------------------------------
-void VectorExpressionFunction::update(NewArray<real>& w, const Cell& cell, 
-				      const NewFiniteElement& element) const
-{
-  // FIXME: time t and index ignored
-  
-  w.resize(element.spacedim());
-  for (unsigned int i = 0; i < element.spacedim(); i++)
-  {
-    const Point& p = element.coord(i, cell);
-    w[i] = f(p.x, p.y, p.z, 0.0, 0);
-  }
 }
 //-----------------------------------------------------------------------------
