@@ -11,7 +11,6 @@ namespace dolfin {
 
   class Cell;
   class FiniteElement;
-  class NewFiniteElement;
   
   class ExpressionFunction : public GenericFunction {
   public:
@@ -28,9 +27,6 @@ namespace dolfin {
     virtual void update(FunctionSpace::ElementFunction& v,
 			const FiniteElement& element,
 			const Cell& cell, real t) const = 0;
-
-    // Update local function (restriction to given cell)
-    virtual void update(NewArray<real>& w, const Cell& cell, const NewFiniteElement& element) const = 0;
     
   };
 
